python_scripts/logs/flashpoint_Bit_morgan_model_comaparison.log
nohup: ignoring input
  File "/home/cat/descriptors/python_scripts/compare_models.py", line 50
    wrapped_title = "\n".join(textwrap.wrap(f"R2 comparision - {model_names_str}")
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
